# stellar-contract-bindings

./: .gitignore  README.md  pyproject.toml
.github/workflows/: continuous-integration-workflow.yml
contracts/contracts/python/: Cargo.toml
contracts/contracts/python/src/: lib.rs
src/: python.py
stellar_contract_bindings/: cli.py  flutter.py  java.py  kmp.py  metadata.py  php.py  python.py  swift.py  utils.py
tests/: client.py  test_client.py  test_flutter_generator.py  test_kotlin_generator.py  test_metadata.py  test_php_generator.py  test_swift_generator.py
tests/contracts/: deploy_python_contract.py
tests/contracts/contracts/python/src/: lib.rs
web_interface/: app.py  fly.toml  requirements.txt
